app/assets/stylesheets/app.css
/* ... */
.nav-tabs > li > a:focus > .badge, .nav-tabs > li > a:hover > .badge {
    color: #428bca;
    background-color: #ffffff;
}*/
.nav-tabs > li.active > a > .badge {
    background-color: darkgrey;
    color: #ffffff;
}
.nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
    background-color: #f0f0f0;
    background-image: none;
    color: #548b0c;
    border-top-color: #ddd;
    border-left-color: #ddd;
    border-right-color: #ddd;
}
.nav-tabs > li.active > a {
    background-color: #ffffff;
    background-image: none;
}
.tab-icon {
    margin-right: 5px
}
.convo {
    max-height: 600px;
    margin-bottom: 0;
    /*overflow: -moz-scrollbars-none;
    -ms-overflow-style: none;*/
}
.message {
    width: 100%;
    clear: both;
}
.message > div.string {
    max-width: 70%;
}
.message div {
    margin-bottom: 5px;
    padding: 5px 10px;
    background-color: #f5f5f5;
    border-radius: 10px;
}
.message > div.me {
    background-color: #E3F2DB;
    /*color: #3F6F01;*/
}
.message-date {
    background-color: #ffffff!important;
    color: white;
    font-size: 11px;
    width: auto;
}
.message:focus > .message-date, .message:hover > .message-date {
    color: lightgray;
}
.messages-wrapper {
    padding-top: 10px;
    max-height: 500px;
    /*overflow-y: scroll;
    overflow: -moz-scrollbars-none;
    ms-overflow-style: none;*/
    padding-right: 10px;
    height: 500px!important;
    min-height: 100%;
}
.message > div {
    float: left;
}
.message.pull-right > div {
    float: right;
}
.message-from {
    -webkit-box-shadow: 0 2px 2px -2px #888;
    box-shadow: 0 2px 2px -2px #888;
    position: relative;
    height: 30px;
}
.message-reply {
    width: 100%;
    max-width: 100%;
    height: auto;
    max-height: 150px;
    min-height: 50px;
    margin: 10px 0;
    padding: 15px;
    border: 1px solid #ddd;
    outline: none;
    /*overflow-y: scroll;
    overflow: -moz-scrollbars-none;
    -ms-overflow-style: none;*/
}
.message-reply:focus {
    border-color: #92d13d!important;
    /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.055) inset, 0 0 8px rgba(84, 139, 12, 0.5)!important;*/
}
.message-title {
    padding: 10px;
    border-radius: 3px;
    background-color: #f1f1f1;
    margin: 3px 0 15px 0;
    text-align: center;
}
.tabs-separator {
    height: 20px;
    border: 1px solid #ddd;
    border-top: none;
    border-bottom: none;
    background-color: #ffffff;
}
.records-wrapper  {
    border: 1px solid #ddd;
    border-top: none;
    height: auto;
    min-height: 710px!important;
    background-color: #ffffff;
}
.records-wrapper.sample {
    min-height: 780px!important;
}
.purchase-pills {
    padding: 0 15px;
}
.list-group-item {
    background-color: #f5f5f5;
}
.list-group-item > p {
    overflow: hidden;
    height: 35px;
}
.list-group-item:hover, .list-group-item:focus {
    background-color: #f0f0f0;
}
.list-group-item.active,
.list-group-item.active:hover,
.list-group-item.active:focus {
    background-image: linear-gradient(to bottom, #95DD34 0%, #72BB10 100%);
    background-repeat: repeat-x;
    border-color: #72BB10;
    text-shadow:
    -1px -1px 0 #5ca402,
    1px -1px 0 #5ca402,
    -1px 1px 0 #5ca402,
    1px 1px 0 #5ca402 !important;
}
.list-group-item.active
.list-group-item-text,
.list-group-item.active:hover
.list-group-item-text,
.list-group-item.active:focus
.list-group-item-text {
    color: #ffffff;
}
.list-group-item .badge {
    background-color: #AAAAAA;
}
.list-group-item.active .badge,
.list-group-item.active:hover .badge,
.list-group-item.active:focus .badge {
    text-shadow: none;
    background-color: #ffffff;
    color: rgb(66, 139, 202);
}
.outer-convo {
    overflow: hidden;
}
.scroll {
    margin-right: -18px !important;
    overflow-y: scroll;
    overflow-x: hidden;
    padding-right: 18px;
}

